Fix invalid project loading with temporary solution & add StringUtils